// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders the structure correctly 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly for preview when no header is provided 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label=""
          class="th"
          role="columnheader"
          style="cursor:unset"
          title=""
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-center"
            >
              <span>
                 
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with column alignments 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr 1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-center"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
        <div
          aria-label="Test 2"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test 2"
        >
          <div
            class="column-container"
            id="1"
          >
            <div
              class="column-header align-column-right"
            >
              <span>
                Test 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
        <div
          class="td td-borders"
          role="cell"
        >
          Test 2
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with custom filtering 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
            <input
              type="text"
              value="dummy"
            />
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with dragging 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with dynamic row class 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr myclass"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with empty placeholder 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with filtering 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
            <input
              type="text"
              value="dummy"
            />
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with header filters and a11y 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      aria-label="filter title"
      class="header-filters"
      role="rowgroup"
    >
      <div
        class="my-custom-filters"
      >
        <span />
      </div>
    </div>
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with header wrapper 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          class="my-custom-header"
        >
          <div
            aria-label="Test"
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              id="0"
            >
              <div
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with hiding 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr fit-content(50px)"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
        <div
          aria-label="Column selector"
          class="th column-selector"
          role="columnheader"
          title="Column selector"
        >
          <div
            class="column-selector-content"
          >
            <button
              aria-controls="undefined-column-selectors"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Column selector"
              class="btn btn-default column-selector-button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-eye fa-w-18"
                data-icon="eye"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M288 144a110.94 110.94 0 0 0-31.24 5 55.4 55.4 0 0 1 7.24 27 56 56 0 0 1-56 56 55.4 55.4 0 0 1-27-7.24A111.71 111.71 0 1 0 288 144zm284.52 97.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400c-98.65 0-189.09-55-237.93-144C98.91 167 189.34 112 288 112s189.09 55 237.93 144C477.1 345 386.66 400 288 400z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
        <div
          aria-hidden="true"
          class="td column-selector td-borders"
        />
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with paging 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    >
      <div
        aria-label="Pagination"
        class="pagination-bar"
        role="pagination"
      >
        <button
          aria-label="Go to first page"
          class="btn pagination-button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon step-backward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M23.19 6.63L11.51 15.61C11.25 15.81 11.25 16.2 11.51 16.4L23.2 25.38C23.53 25.64 24.01 25.4 24.01 24.99V7.02C24.01 6.6 23.53 6.37 23.2 6.63H23.19Z"
                fill="currentColor"
              />
              <path
                d="M10 6H8V26H10V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Go to previous page"
          class="btn pagination-button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon backward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.19 6.63L3.51 15.61C3.25 15.81 3.25 16.2 3.51 16.4L14.2 25.38C14.53 25.64 15.01 25.4 15.01 24.99V7.02C15.01 6.6 14.53 6.37 14.2 6.63H14.19Z"
                fill="currentColor"
              />
              <path
                d="M27.19 6.63L16.5 15.61C16.24 15.81 16.24 16.2 16.5 16.4L27.19 25.38C27.52 25.64 28 25.4 28 24.99V7.02C28 6.6 27.52 6.37 27.19 6.63Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <span
          class="sr-only sr-only-focusable"
        >
          Currently showing 11 to 20 
        </span>
        <div
          aria-hidden="true"
          class="paging-status"
        >
          11 to 20 
        </div>
        <button
          aria-label="Go to next page"
          class="btn pagination-button"
          disabled=""
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon forward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.81 6.63C17.48 6.37 17 6.61 17 7.02V24.98C17 25.4 17.48 25.63 17.81 25.37L28.5 16.39C28.76 16.19 28.76 15.8 28.5 15.6L17.81 6.63Z"
                fill="currentColor"
              />
              <path
                d="M4.81 6.63C4.48 6.37 4 6.61 4 7.02V24.98C4 25.4 4.48 25.63 4.81 25.37L15.5 16.39C15.76 16.19 15.76 15.8 15.5 15.6L4.81 6.63Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders the structure correctly with resizing 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table renders the structure correctly with sorting 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="table"
    role="table"
  >
    <div
      class="table-header"
      role="rowgroup"
    />
    <div
      class="table-content infinite-loading"
      role="rowgroup"
      style="grid-template-columns:1fr"
    >
      <div
        class="tr"
        role="row"
      >
        <div
          aria-label="Test"
          class="th"
          role="columnheader"
          style="cursor:unset"
          title="Test"
        >
          <div
            class="column-container"
            id="0"
          >
            <div
              class="column-header align-column-left"
            >
              <span>
                Test
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tr"
        role="row"
      >
        <div
          class="td td-borders"
          role="cell"
        >
          Test
        </div>
      </div>
    </div>
    <div
      class="table-footer"
      role="rowgroup"
    />
  </div>
</div>
`;

exports[`Table with selection method checkbox render an extra column and add class to each selected cell 1`] = `
<DocumentFragment>
  <div
    class="test widget-datagrid widget-datagrid-selection-method-checkbox"
  >
    <div
      class="table"
      role="table"
    >
      <div
        class="table-header"
        role="rowgroup"
      />
      <div
        class="table-content"
        role="rowgroup"
        style="grid-template-columns: fit-content(48px) 1fr;"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th widget-datagrid-col-select"
            role="columnheader"
          />
          <div
            aria-label="Test"
            class="th"
            role="columnheader"
            style="cursor: unset;"
            title="Test"
          >
            <div
              class="column-container"
              id="0"
            >
              <div
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr tr-selected"
          role="row"
        >
          <div
            class="td widget-datagrid-col-select td-borders"
          >
            <input
              checked=""
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <div
            class="td td-borders"
            role="cell"
          >
            Test
          </div>
        </div>
        <div
          class="tr tr-selected"
          role="row"
        >
          <div
            class="td widget-datagrid-col-select"
          >
            <input
              checked=""
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <div
            class="td"
            role="cell"
          >
            Test
          </div>
        </div>
        <div
          class="tr tr-selected"
          role="row"
        >
          <div
            class="td widget-datagrid-col-select"
          >
            <input
              checked=""
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <div
            class="td"
            role="cell"
          >
            Test
          </div>
        </div>
      </div>
      <div
        class="table-footer"
        role="rowgroup"
      >
        <div
          aria-label="Pagination"
          class="pagination-bar"
          role="pagination"
        >
          <button
            aria-label="Go to first page"
            class="btn pagination-button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                class="pagination-icon step-backward"
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M23.19 6.63L11.51 15.61C11.25 15.81 11.25 16.2 11.51 16.4L23.2 25.38C23.53 25.64 24.01 25.4 24.01 24.99V7.02C24.01 6.6 23.53 6.37 23.2 6.63H23.19Z"
                  fill="currentColor"
                />
                <path
                  d="M10 6H8V26H10V6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Go to previous page"
            class="btn pagination-button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                class="pagination-icon backward"
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.19 6.63L3.51 15.61C3.25 15.81 3.25 16.2 3.51 16.4L14.2 25.38C14.53 25.64 15.01 25.4 15.01 24.99V7.02C15.01 6.6 14.53 6.37 14.2 6.63H14.19Z"
                  fill="currentColor"
                />
                <path
                  d="M27.19 6.63L16.5 15.61C16.24 15.81 16.24 16.2 16.5 16.4L27.19 25.38C27.52 25.64 28 25.4 28 24.99V7.02C28 6.6 27.52 6.37 27.19 6.63Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <span
            class="sr-only sr-only-focusable"
          >
            Currently showing 11 to 20 
          </span>
          <div
            aria-hidden="true"
            class="paging-status"
          >
            11 to 20 
          </div>
          <button
            aria-label="Go to next page"
            class="btn pagination-button"
            disabled=""
          >
            <span
              aria-hidden="true"
            >
              <svg
                class="pagination-icon forward"
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.81 6.63C17.48 6.37 17 6.61 17 7.02V24.98C17 25.4 17.48 25.63 17.81 25.37L28.5 16.39C28.76 16.19 28.76 15.8 28.5 15.6L17.81 6.63Z"
                  fill="currentColor"
                />
                <path
                  d="M4.81 6.63C4.48 6.37 4 6.61 4 7.02V24.98C4 25.4 4.48 25.63 4.81 25.37L15.5 16.39C15.76 16.19 15.76 15.8 15.5 15.6L4.81 6.63Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table with selection method rowClick add class to each selected cell 1`] = `
<DocumentFragment>
  <div
    class="test widget-datagrid widget-datagrid-selection-method-click"
  >
    <div
      class="table"
      role="table"
    >
      <div
        class="table-header"
        role="rowgroup"
      />
      <div
        class="table-content"
        role="rowgroup"
        style="grid-template-columns: 1fr;"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            aria-label="Test"
            class="th"
            role="columnheader"
            style="cursor: unset;"
            title="Test"
          >
            <div
              class="column-container"
              id="0"
            >
              <div
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr tr-selected"
          role="row"
        >
          <div
            class="td td-borders clickable"
            role="button"
            tabindex="0"
          >
            Test
          </div>
        </div>
        <div
          class="tr tr-selected"
          role="row"
        >
          <div
            class="td clickable"
            role="button"
            tabindex="0"
          >
            Test
          </div>
        </div>
        <div
          class="tr tr-selected"
          role="row"
        >
          <div
            class="td clickable"
            role="button"
            tabindex="0"
          >
            Test
          </div>
        </div>
      </div>
      <div
        class="table-footer"
        role="rowgroup"
      >
        <div
          aria-label="Pagination"
          class="pagination-bar"
          role="pagination"
        >
          <button
            aria-label="Go to first page"
            class="btn pagination-button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                class="pagination-icon step-backward"
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M23.19 6.63L11.51 15.61C11.25 15.81 11.25 16.2 11.51 16.4L23.2 25.38C23.53 25.64 24.01 25.4 24.01 24.99V7.02C24.01 6.6 23.53 6.37 23.2 6.63H23.19Z"
                  fill="currentColor"
                />
                <path
                  d="M10 6H8V26H10V6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Go to previous page"
            class="btn pagination-button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                class="pagination-icon backward"
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.19 6.63L3.51 15.61C3.25 15.81 3.25 16.2 3.51 16.4L14.2 25.38C14.53 25.64 15.01 25.4 15.01 24.99V7.02C15.01 6.6 14.53 6.37 14.2 6.63H14.19Z"
                  fill="currentColor"
                />
                <path
                  d="M27.19 6.63L16.5 15.61C16.24 15.81 16.24 16.2 16.5 16.4L27.19 25.38C27.52 25.64 28 25.4 28 24.99V7.02C28 6.6 27.52 6.37 27.19 6.63Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <span
            class="sr-only sr-only-focusable"
          >
            Currently showing 11 to 20 
          </span>
          <div
            aria-hidden="true"
            class="paging-status"
          >
            11 to 20 
          </div>
          <button
            aria-label="Go to next page"
            class="btn pagination-button"
            disabled=""
          >
            <span
              aria-hidden="true"
            >
              <svg
                class="pagination-icon forward"
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.81 6.63C17.48 6.37 17 6.61 17 7.02V24.98C17 25.4 17.48 25.63 17.81 25.37L28.5 16.39C28.76 16.19 28.76 15.8 28.5 15.6L17.81 6.63Z"
                  fill="currentColor"
                />
                <path
                  d="M4.81 6.63C4.48 6.37 4 6.61 4 7.02V24.98C4 25.4 4.48 25.63 4.81 25.37L15.5 16.39C15.76 16.19 15.76 15.8 15.5 15.6L4.81 6.63Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
